[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonst/20219.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://settings/settingsScene.gd" type="Script" id=2]
[ext_resource path="res://settings/PopupControl.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="settingsGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_bottom = 1.0

[node name="ContentBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/ContentBox"]
margin_right = 1024.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionList" type="VBoxContainer" parent="Panel/ContentBox/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonBox" type="VBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 1024.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Panel/ButtonBox"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Save"

[node name="CancelButton" type="Button" parent="Panel/ButtonBox"]
margin_top = 61.0
margin_right = 1024.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Cancel"

[node name="Popup" parent="Panel" instance=ExtResource( 3 )]

[connection signal="pressed" from="Panel/ButtonBox/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Panel/ButtonBox/CancelButton" to="." method="_on_CancelButton_pressed"]
